--- a/app/routes/Home/stylesheet.scss
+++ b/app/routes/Home/stylesheet.scss
@@ -317,6 +317,8 @@ hr {
 @media screen and (min-width: 769px) and (orientation: landscape) {
   .comics-thought {
     top: 8%;
+    -moz-transform: scale(.90);
+    -webkit-transform: scale(.90);
     transform: scale(.90);
   }
 }
@@ -324,6 +326,8 @@ hr {
 @media screen and (max-height: 768px) and (orientation: landscape) {
 	.comics-thought {
     top: 5%;
+    -moz-transform: scale(.60);
+    -webkit-transform: scale(.60);
 		transform: scale(.60);
 	}
 }
