--- a/app/routes/Home/stylesheet.scss
+++ b/app/routes/Home/stylesheet.scss
@@ -314,14 +314,7 @@ hr {
 } 
 
 
-@media screen and (min-width: 801px) and (orientation: landscape) {
-  .comics-thought {
-    top: 8%;
-    -moz-transform: scale(.90);
-    -webkit-transform: scale(.90);
-    transform: scale(.90);
-  }
-}
+
 
 @media screen and (max-height: 800px) and (orientation: landscape) {
 	.comics-thought {
@@ -330,6 +323,15 @@ hr {
     -webkit-transform: scale(.60);
 		transform: scale(.60);
 	}
+}
+
+@media (min-width: 801px) and (max-width: 3000px) and (orientation: landscape) {
+  .comics-thought {
+    top: 8%;
+    -moz-transform: scale(.90);
+    -webkit-transform: scale(.90);
+    transform: scale(.90);
+  }
 }
 
 .icons {
