--- a/app/routes/Home/stylesheet.scss
+++ b/app/routes/Home/stylesheet.scss
@@ -313,25 +313,36 @@ hr {
   }  
 } 
 
+@media screen and (max-height: 782px) and (orientation: landscape) {
+  .comics-thought {
+    top: auto;
+    bottom: 40%;
+    -moz-transform: scale(.60);
+    -webkit-transform: scale(.60);
+    transform: scale(.60);
+  }
+}
+
+
+@media screen and (max-height: 782px) and (orientation: landscape) {
+  .comics-thought {
+    top: auto;
+    bottom: 40%;
+    -moz-transform: scale(.60);
+    -webkit-transform: scale(.60);
+    transform: scale(.60);
+  }
+}
 
 @media screen and (min-height: 783px) and (orientation: landscape) {
   .comics-thought {
-    top: 8%;
+    top: auto;
+    bottom: 50%;
     -moz-transform: scale(.90);
     -webkit-transform: scale(.90);
     transform: scale(.90);
   }
 }
-
-@media screen and (max-height: 782px) and (orientation: landscape) {
-	.comics-thought {
-    top: 5%;
-    -moz-transform: scale(.60);
-    -webkit-transform: scale(.60);
-		transform: scale(.60);
-	}
-}
-
 .icons {
 	display: flex;
 	flex-wrap: wrap;
